--- a/package.json
+++ b/package.json
@@ -2,30 +2,35 @@
   "name": "timer2ticket_api",
   "version": "1.0.0",
   "description": "User service middleware for T2T applications.",
-  "main": "dist/app.js",
+  "main": "dist/src/app.js",
   "scripts": {
-    "start": "tsc-watch --project . --outDir ./dist --onSuccess \"nodemon ./dist/app.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc-watch --project . --outDir ./dist --onSuccess \"nodemon ./dist/src/app.js\"",
+    "start-test": "npm run build && node ./dist/src/app.js",
+    "test": "mocha -r ts-node/register './test/**/*.spec.ts'",
     "build": "tsc --build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "class-validator": "^0.13.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.4",
-    "node-cron": "^3.0.0",
-    "superagent": "^6.1.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/chai": "^4.2.15",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.2.2",
     "@types/mongodb": "^3.6.8",
     "@types/node-cron": "^2.0.3",
     "@types/superagent": "^4.1.10",
+    "bcrypt": "^5.0.1",
+    "chai": "^4.3.4",
+    "class-validator": "^0.13.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.3.2",
+    "mongodb": "^3.6.4",
+    "node-cron": "^3.0.0",
+    "superagent": "^6.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "devDependencies": {
