Dockerfile and publish-image.yml changed because of tests.

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/upload-artifact@main
         with:
           name: webpack artifacts
-          path: dist/
+          path: dist/src/
 
   build-and-push-image:
     runs-on: ubuntu-latest
